<resources>
    <string name="app_name">PetsApp</string>

    <!-- Login -->
    <string name="desc_login_img">Pets App Logo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="error_login">Please verify your credentials!</string>

    <!-- Home -->
    <string name="home_title">Pets</string>

    <!-- Pet Item -->
    <string name="desc_pet_image">Pet Image</string>

    <plurals name="pet_plural_format">
        <item quantity="one">%1$s, %2$d year</item>
        <item quantity="other">%1$s, %2$d years</item>
    </plurals>


    <!-- Pet Details -->
    <string name="pet_color">Color</string>
    <string name="pet_description">Description</string>

</resources>